--- a/site/index.html
+++ b/site/index.html
@@ -38,7 +38,7 @@
 					<h1>Concordance</h1>
 					<p>A Hollistic Analysis of Education<br />
 				</div>
-													<ul class="actions fit">
+									    <ul class="actions fit">
 										<li><a href="#" class="button primary fit">Fit</a></li>
 										<li><a href="#" class="button fit">Fit</a></li>
 				</ul>
@@ -51,7 +51,7 @@
 			<section class="wrapper">
 				<div class="inner">
 					<ul class="actions fit">
-						<li><a href="#" class="button primary fit">Click For Rankings</a></li>
+						<li><a href="file:///Users/earosen/Documents/GitHub/Concordance-Assets/site/generic.html" class="button primary fit">Click For Rankings</a></li>
 					</ul>
 					<header class="special">
 						<h2>We Find Where The Top Students Learn</h2>
